fixed result overflow

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ header {
     border: 1px solid yellow;
 }
 .decimal {
-    border: 1px solid powderblue;
+    border: 1px solid aqua;
 }
 .equals {
     border: 1px solid palevioletred;
